src/Compilador/CompiladorRegras.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */
options{  static = true;}

PARSER_BEGIN(VerificadorSintaxe)

package Compilador;

public class VerificadorSintaxe
{
  public static void main(String [] args)
  {
    try
    {
      String programa = ReadFile.Read("src/codigo.txt");
      new VerificadorSintaxe(new java.io.StringReader(programa)).INICIO();
      System.out.println("\n\nA sintaxe esta correta!");
    }
    catch (Throwable e)
    {
      System.out.println("\n\nErro na sintaxe: " + e.getMessage());
    }
  }
}

PARSER_END(VerificadorSintaxe)

// Expressoes a serem ignoradas
SKIP :
{	
  " "
| "\r"
| "\t"
| "\n"
| "//" : comentarioSimples
| "/*" : comentarioLongo
}

< comentarioSimples >
SKIP :
{
  "\n" : DEFAULT
| < ~[ ] >
}

< comentarioLongo >
SKIP :
{
  "*/" : DEFAULT
| < ~[ ] >
}

// Palavras reservadas - Comandos
TOKEN :
{		
  	< NULL : 	"null" >				{ System.out.println("Palavra reservada: " + image); }
| 	< IMPORT : 	"import" > 				{ System.out.println("Palavra reservada: " + image); }
| 	< PACKAGE : "package" >				{ System.out.println("Palavra reservada: " + image); }
| 	< CLASS : 	"class" >				{ System.out.println("Palavra reservada: " + image); }
| 	< WHILE : 	"while" >				{ System.out.println("Palavra reservada: " + image); }
| 	< IF : 		"if" > 					{ System.out.println("Palavra reservada: " + image); }
| 	< ELSE : 	"else" > 				{ System.out.println("Palavra reservada: " + image); }
| 	< TRUE : 	"true" > 				{ System.out.println("Palavra reservada: " + image); }
| 	< FALSE : 	"false" > 				{ System.out.println("Palavra reservada: " + image); }
| 	< PRINT : 	"System.out.println" > 	{ System.out.println("Palavra reservada: " + image); }
| 	< RETURN : 	"return" > 				{ System.out.println("Palavra reservada: " + image); }
}

// Palavras reservadas - Tipos de dados
TOKEN :
{
  	< INT : 	"int" >		{ System.out.println("Tipo de Dados: " + image); }
| 	< FLOAT : 	"float" >	{ System.out.println("Tipo de Dados: " + image); }
| 	< STRING : 	"String" >	{ System.out.println("Tipo de Dados: " + image); }
| 	< CHAR : 	"char" >	{ System.out.println("Tipo de Dados: " + image); }
| 	< BOOLEAN : "boolean" >	{ System.out.println("Tipo de Dados: " + image); }
| 	< VOID : 	"void" >	{ System.out.println("Tipo de Dados: " + image); }
}

// Palavras reservadas - Modificadores de acesso
TOKEN :
{
  	< STATIC : 		"static" >		{ System.out.println("Modificador de acesso: " + image); }
| 	< PUBLIC : 		"public" >		{ System.out.println("Modificador de acesso: " + image); }
| 	< PROTECTED : 	"protected" >	{ System.out.println("Modificador de acesso: " + image); }
| 	< PRIVATE : 	"private" >		{ System.out.println("Modificador de acesso: " + image); }
| 	< FINAL : 		"final" >		{ System.out.println("Modificador de acesso: " + image); }
}


// Palavras reservadas - Separadores
TOKEN :
{
  	< AC : 				"{" >	{ System.out.println("Separador: " + image); }
| 	< FC : 				"}" >	{ System.out.println("Separador: " + image); }
| 	< AB : 				"[" >	{ System.out.println("Separador: " + image); }
| 	< FB : 				"]" >	{ System.out.println("Separador: " + image); }
| 	< AP : 				"(" >	{ System.out.println("Separador: " + image); }
| 	< FP : 				")" >	{ System.out.println("Separador: " + image); }
| 	< VIRGULA : 		"," >	{ System.out.println("Separador: " + image); }
| 	< PONTO_VIRGULA : 	";" >	{ System.out.println("Separador: " + image); }
| 	< PONTO_ASTERISCO : ".*" >	{ System.out.println("Separador: " + image); }
| 	< PONTO : 			"." >	{ System.out.println("Separador: " + image); }
}

// Palavras reservadas - Operadores aritmeticos
TOKEN :
{
  	< SOMA : 				"+" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< SUBTRACAO : 			"-" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< DIVISAO : 			"/" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< MUTIPLICACAO : 		"*" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< MODULO : 				"%" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< SUBTRACAO_PLUS : 		"-=" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< SOMA_PLUS : 			"+=" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< MULTIPLICACAO_PLUS : 	"*=" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< DIVISAO_PLUS : 		"/=" >	{ System.out.println("Operador aritmetico: " + image); }
| 	< MODULO_PLUS : 		"%=" >	{ System.out.println("Operador aritmetico: " + image); }
}

// Palavras reservadas - Operadores relacionais
TOKEN :
{
  	< MENOR : "<" >			{ System.out.println("Operador relacional: " + image); }
| 	< MAIOR : ">" >			{ System.out.println("Operador relacional: " + image); }
| 	< MAIOR_IGUAL : ">=" >	{ System.out.println("Operador relacional: " + image); }
| 	< MENOR_IGUAL : "<=" >	{ System.out.println("Operador relacional: " + image); }
}

// Palavras reservadas - Operadores logicos
TOKEN :
{
  	< AND : "&&" >		{ System.out.println("Operador logico: " + image); }
| 	< OR : "||" >		{ System.out.println("Operador logico: " + image); }
| 	< NEGACAO : "!" >	{ System.out.println("Operador logico: " + image); }
}

// Palavras reservadas - Outros operadores
TOKEN :
{
  	< ATRIBUICAO : "=" >	{ System.out.println("Outros operadores: " + image); }
| 	< DECREMENTO : "--" >	{ System.out.println("Outros operadores: " + image); }
| 	< INCREMENTO : "++" >	{ System.out.println("Outros operadores: " + image); }
| 	< DIFERENCA : "!=" >	{ System.out.println("Outros operadores: " + image); }
| 	< IGUALDADE : "==" >	{ System.out.println("Outros operadores: " + image); }
}


// Identificadores
TOKEN :
{
  < IDENTIFICADOR :
    < LETRA >
    (
      < LETRA >
    | < DIGITO >
    | "_"
    | "$"
    )* > { System.out.println("Identificador: " + image); }
| 	< #LETRA : ([ "a"-"z", "A"-"Z" ]) >
| 	< #DIGITO : [ "0"-"9" ] >
}

// Literais
TOKEN :
{
  < INTEGER_LITERAL : < DECIMAL_LITERAL > ([ "l", "L" ])? >	{ System.out.println("Literal inteiro: " + image); }
| < #DECIMAL_LITERAL : [ "0"-"9" ] ([ "0"-"9" ])* >
| < FLOATING_POINT_LITERAL :
    ([ "0"-"9" ])+ "." ([ "0"-"9" ])* (< EXPONENT >)? ([ "f", "F", "d", "D" ])?
  | "." ([ "0"-"9" ])+ (< EXPONENT >)? ([ "f", "F", "d", "D" ])?
  | ([ "0"-"9" ])+ < EXPONENT > ([ "f", "F", "d", "D" ])?
  | ([ "0"-"9" ])+ (< EXPONENT >)? [ "f", "F", "d", "D" ] >	{ System.out.println("Literal ponto flutuante: " + image); }
| < #EXPONENT : [ "e", "E" ] ([ "+", "-" ])? ([ "0"-"9" ])+ >
| < STRING_LITERAL :
    "\""
    (
      (~[ "\"", "\\", "\n", "\r" ])
    |
      (
        "\\"
        (
          [ "n", "t", "b", "r", "f", "\\", "'", "\"" ]
        | [ "0"-"7" ] ([ "0"-"7" ])?
        | [ "0"-"3" ] [ "0"-"7" ] [ "0"-"7" ]
        )
      )
    )*
    "\"" >	{ System.out.println("Literal string: " + image); }
| < CHARACTER_LITERAL :
    "'"
    (
      (~[ "'", "\\", "\n", "\r" ])
    |
      (
        "\\"
        (
          [ "n", "t", "b", "r", "f", "\\", "'", "\"" ]
        | [ "0"-"7" ] ([ "0"-"7" ])?
        | [ "0"-"3" ] [ "0"-"7" ] [ "0"-"7" ]
        )
      )
    )
    "'" >	{ System.out.println("Literal char: " + image); }
}

/* 
* Gramatica da linguagem - Java
*/

void INICIO() :
{}
{
  Programa()
}

void Programa() :
{}
{
  [ DeclaracaoPacote() ]
  (
    DeclaracaoImport()
  )*
  DeclaracaoClasse()
}

void DeclaracaoPacote() :
{}
{
  "package" < IDENTIFICADOR >
  (
    DeclaracaoEstendida()
  )*
  ";"
}

void DeclaracaoImport() :
{}
{
  "import" < IDENTIFICADOR >
  (
    DeclaracaoEstendida()
  )*
  [ < PONTO_ASTERISCO > ] ";"
}

void DeclaracaoEstendida() :
{}
{
  "." < IDENTIFICADOR >
}

void DeclaracaoClasse() :
{}
{
  Modificador() [ < FINAL > ] < CLASS > < IDENTIFICADOR > "{" CorpoClasse() "}"
}

void CorpoClasse() :
{}
{
  (
    (
      [ Modificador() ]
      (
        [ < STATIC > ] [ < FINAL > ] TiposDados() < IDENTIFICADOR >
        (
          DeclaracaoVariavel()
        | DeclaracaoMetodo()
        )
      | DeclaracaoConstrutor()
      )
    )
  | Main()
  )*
}

void Main() :
{}
{
  "public static void main" "(" < STRING > "[" "]" < IDENTIFICADOR > ")" DeclaracaoBloco()
}

void Modificador() :
{}
{
  "private"
| "protected"
| "public"
}

void TiposDados() :
{}
{
  "int"
| "float"
| "String"
| "char"
| "boolean"
| "void"
}

void DeclaracaoBloco() :
{}
{
  "{"
  (
    DeclaracaoCorpo()
  )*
  "}"
}

void DeclaracaoCorpo() :
{}
{
  TiposDados() < IDENTIFICADOR > DeclaracaoVariavel()
| < RETURN > [ RetornoOpcoes() ] ";"
| IfElse()
| Print()
| While()
| Expressao() ";"
}

void DeclaracaoMetodo() :
{}
{
  "(" [ ListaParametros() ] ")" DeclaracaoBloco()
}

void DeclaracaoConstrutor() :
{}
{
  < IDENTIFICADOR > "(" [ ListaParametros() ] ")" DeclaracaoBloco()
}

void DeclaracaoVariavel() :
{}
{
  InicializacaoVariavel()
  (
    "," < IDENTIFICADOR > InicializacaoVariavel()
  )*
  ";"
}

void InicializacaoVariavel() :
{}
{
  [ "=" InicializacaoOpcoes() ]
}

void InicializacaoOpcoes() :
{}
{
  (
    Expressao()
  | < NULL >
  | < TRUE >
  | < FALSE >
  )
}

void RetornoOpcoes() :
{}
{
  InicializacaoOpcoes()
| TiposDados()
}

void IfElse() :
{}
{
  < IF > "(" Expressao() ")" DeclaracaoBloco() [ < ELSE > DeclaracaoBloco() ]
}

void Print() :
{}
{
  < PRINT > "(" Expressao() ")" ";"
}

void While() :
{}
{
  < WHILE > "(" Expressao() ")" DeclaracaoBloco()
}

void Expressao() :
{}
{
  [ < NEGACAO > ]
  (
    (
      < IDENTIFICADOR >
      [
        ChamadaMetodo()
      | < INCREMENTO >
      | < DECREMENTO >
      ]
    | ExpressaoLiteral()
    )
    [
      Atribuicao()
    | ComparacaoLogica()
    | ComparacaoRelacional()
    | ExpressaoNumerica()
    ]
  	| "(" Expressao() ")"
  )
}

void ChamadaMetodo() :
{}
{
  "(" [ ListaArgumentos() ] ")"
}

void ListaArgumentos() :
{}
{
  Expressao()
  (
    "," Expressao()
  )*
}

void ListaParametros() :
{}
{
  Parametro()
  (
    "," Parametro()
  )*
}

void ExpressaoLiteral() :
{}
{
  < INTEGER_LITERAL >
| < FLOATING_POINT_LITERAL >
| < CHARACTER_LITERAL >
| < STRING_LITERAL >
}

void Atribuicao() :
{}
{
  "=" Expressao()
}

void ComparacaoLogica() :
{}
{
  (
    "&&"
  | "||"
  )
  Expressao()
}

void ComparacaoRelacional() :
{}
{
  (
    ">"
  | "<"
  | ">="
  | "<="
  | "=="
  | "!="
  )
  Expressao()
}

void ExpressaoNumerica() :
{}
{
  (
    "+"
  | "+="
  | "-"
  | "-="
  | "*"
  | "*="
  | "/"
  | "/="
  | "%"
  | "%="
  )
  Expressao()
}

void Parametro() :
{}
{
  TiposDados() < IDENTIFICADOR >
}
